Fixes layout issues with menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,6 @@
   transition: all .5s ease;
   overflow: hidden;
   top: -360px;
-  cursor: s-resize;
   
 }
 .menuDiv-open {
@@ -17,7 +16,6 @@
   position: absolute;
   transition: all .5s ease;
   top: 0;
-  cursor: n-resize;
 }
 #playerDiv {
   margin-top: 40px;
@@ -27,7 +25,9 @@
   top: 0;
   right: 0;
   padding: 12px 10px;
+  cursor: pointer;
+  z-index: 2;
 }
-.ListGroup-wrapper {
-  padding-top: 40px;
+.menuDiv-wrapper {
+  margin-top: 40px;
 }
